triqs/3.1.x/_sources/documentation/cpp_api/triqs/gfs/gf_const_view.rst.txt
..
   Generated automatically by cpp2rst

.. highlight:: c
.. role:: red
.. role:: green
.. role:: param


.. _triqs__gfs__gf_const_view:

triqs::gfs::gf_const_view
=========================

*#include <triqs/gfs.hpp>*

.. rst-class:: cppsynopsis

     template<typename Mesh, typename Target, typename Layout, typename EvalPolicy> class  :red:`gf_const_view`

The const view of a Green function


Template parameters
-------------------

 * **Mesh**:      The domain of definition

 * **Target**:   The target domain


Member types
------------

.. table::
   :widths: 40 60


   +---------------------+------------------------------------------------------------------+-------------------------------------+
   | mutable_view_type   | gf_view<Mesh, Target, Layout, EvalPolicy>                        |                                     |
   +---------------------+------------------------------------------------------------------+-------------------------------------+
   | const_view_type     | gf_const_view<Mesh, Target, Layout, EvalPolicy>                  |  Associated const view type         |
   +---------------------+------------------------------------------------------------------+-------------------------------------+
   | view_type           | gf_const_view<Mesh, Target, Layout, EvalPolicy>                  |  Associated (non const) view type   |
   +---------------------+------------------------------------------------------------------+-------------------------------------+
   | regular_type        | gf<Mesh, Target>                                                 |  Associated regular type (gf<....>) |
   +---------------------+------------------------------------------------------------------+-------------------------------------+
   | real_t              | gf_const_view<Mesh, typename Target::real_t, Layout, EvalPolicy> |  The associated real type           |
   +---------------------+------------------------------------------------------------------+-------------------------------------+
   | target_t            | Target                                                           |  Template type                      |
   +---------------------+------------------------------------------------------------------+-------------------------------------+
   | mesh_t              | Mesh                                                             |  Mesh type                          |
   +---------------------+------------------------------------------------------------------+-------------------------------------+
   | domain_t            | typename mesh_t::domain_t                                        |  Domain type                        |
   +---------------------+------------------------------------------------------------------+-------------------------------------+
   | mesh_point_t        | typename mesh_t::mesh_point_t                                    |  Type of the mesh point             |
   +---------------------+------------------------------------------------------------------+-------------------------------------+
   | mesh_index_t        | typename mesh_t::index_t                                         |                                     |
   +---------------------+------------------------------------------------------------------+-------------------------------------+
   | linear_mesh_index_t | typename mesh_t::linear_index_t                                  |                                     |
   +---------------------+------------------------------------------------------------------+-------------------------------------+
   | indices_t           | gf_indices                                                       |                                     |
   +---------------------+------------------------------------------------------------------+-------------------------------------+
   | evaluator_t         | typename EvalPolicy::template evaluator_t<Mesh, Target>          |                                     |
   +---------------------+------------------------------------------------------------------+-------------------------------------+
   | scalar_t            | typename Target::scalar_t                                        |  Real or Complex                    |
   +---------------------+------------------------------------------------------------------+-------------------------------------+
   | data_t              | nda::basic_array_view<const scalar_t, data_rank, Layout>         |  Type of the data array             |
   +---------------------+------------------------------------------------------------------+-------------------------------------+
   | target_shape_t      | std::array<long, Target::rank>                                   |                                     |
   +---------------------+------------------------------------------------------------------+-------------------------------------+


Member functions
----------------

.. table::
   :widths: 40 60


   +---------------------------------------------------------------+--+
   | :ref:`(constructor) <triqs__gfs__gf_const_view__constructor>` |  |
   +---------------------------------------------------------------+--+
   | :ref:`mesh <triqs__gfs__gf_const_view__mesh>`                 |  |
   +---------------------------------------------------------------+--+
   | :ref:`domain <triqs__gfs__gf_const_view__domain>`             |  |
   +---------------------------------------------------------------+--+
   | :ref:`indices <triqs__gfs__gf_const_view__indices>`           |  |
   +---------------------------------------------------------------+--+
   | :ref:`rebind <triqs__gfs__gf_const_view__rebind>`             |  |
   +---------------------------------------------------------------+--+
   | :ref:`hdf5_format <triqs__gfs__gf_const_view__hdf5_format>`   |  |
   +---------------------------------------------------------------+--+
   | :ref:`serialize <triqs__gfs__gf_const_view__serialize>`       |  |
   +---------------------------------------------------------------+--+


Accessors
~~~~~~~~~

.. table::
   :widths: 40 60


   +-------------------------------------------------------------------+--+
   | :ref:`data <triqs__gfs__gf_const_view__data>`                     |  |
   +-------------------------------------------------------------------+--+
   | :ref:`data_shape <triqs__gfs__gf_const_view__data_shape>`         |  |
   +-------------------------------------------------------------------+--+
   | :ref:`target_shape <triqs__gfs__gf_const_view__target_shape>`     |  |
   +-------------------------------------------------------------------+--+
   | :ref:`target_indices <triqs__gfs__gf_const_view__target_indices>` |  |
   +-------------------------------------------------------------------+--+

.. toctree::
    :hidden:

    gf_const_view/constructor
    gf_const_view/mesh
    gf_const_view/domain
    gf_const_view/data
    gf_const_view/data_shape
    gf_const_view/target_shape
    gf_const_view/target_indices
    gf_const_view/indices
    gf_const_view/rebind
    gf_const_view/hdf5_format
    gf_const_view/serialize


Non Member functions
--------------------

.. table::
   :widths: 40 60


   +---------------------------------------------------------------+--+
   | :ref:`h5_write <triqs__gfs__gf_const_view__h5_write>`         |  |
   +---------------------------------------------------------------+--+
   | :ref:`h5_read <triqs__gfs__gf_const_view__h5_read>`           |  |
   +---------------------------------------------------------------+--+
   | :ref:`operator\<\< <triqs__gfs__gf_const_view__operatorLTLT>` |  |
   +---------------------------------------------------------------+--+

.. toctree::
    :hidden:

    gf_const_view/h5_write
    gf_const_view/h5_read
    gf_const_view/operator<<